--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
     <div class="main-content">
             {{>header}}
     <img class= 'portrait' src='/img/robot.png'>
+    <p>This site was created by Ali Alkhamis</p>
     </div>
     {{>footer}}
 </body>
